src/ui/snapshots/overview_80x24.snap
---
source: src/ui/layout.rs
assertion_line: 492
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max                                      HH:MM:SS
╭╸CPU╺  44.0% ─────────────────────────────────────────────────────────────────╮
│E 1.97GHz · P 3.22GHz                                      63°C avg · 70°C max│
│E  ▁▂▃▄  32.0% @ 1.97GHz                                                      │
│P0 ▆▅▄▃▁▂  43.0% @ 3.22GHz                                                    │
│P1 ▃▄▆▅▄▃  53.0% @ 3.22GHz                ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀│
│                                          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
│                                          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
│⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
╰──────────────────────────────────────────────────────────────────────────────╯
╭╸POWER╺ SYS  32.2W ───────────────────────────────────────────────────────────╮
│PKG  10.3W  peak 12.7W                                                        │
│CPU ██████████████████████████▊▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         8.90W│
│GPU ████▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         1.35W│
│ANE ▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏          20mW│
╰──────────────────────────────────────────────────────────────────────────────╯
╭╸PROCESSES╺ 160 · 10 running · 549 thr ───────────────────────────────────────╮
│    PID USER         CPU%▼    PWR     MEM  THR S      TIME NAME               │
│    659 yusuf        171.0  783mW    1.0G    8 S   18m 39s bird               ┃
│    421 root         169.0  377mW    531M   17 S   10m 01s node               │
│    642 _windowse…   158.0  754mW   1012M    7 I   18m 02s mds_stores         │
│    404 yusuf        156.0  348mW    494M   16 R    9m 24s Xcode              │
╰──────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill
