src/ui/snapshots/overview_arranging_160x45.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                                               macOS 26.5  load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸PROCESSES╺ 160 · 10 running · 549 thr ─────────────────────────────╮╭╸POWER╺ SYS  26.6W ─────────────────────╮╭╸BATTERY · FLOW╺  78% ────────────────────────╮
│    PID USER         CPU%▼    PWR     MEM  THR S      TIME NAME     ││PKG  6.54W  peak 13.2W                  ││█████████████████████████▏▏▏▏▏▏▏    ⚡  charging
│    659 yusuf        171.0  783mW    1.0G    8 S   18m 39s bird     ┃│⣠⣠⣠⡆⣶⣰⣠⣠⡆⣷⣰⣠⣤⡆⣦⣰⣠⣄⡄⣦⣰⣰⣄⣄⣦⣼⣰⣄⣄⣦⣴⢰⣆⣄⣄⣴⢰⣆⣆⣄││health 91%  cycles 312/1000  temp 31°C  1h34m │
│    421 root         169.0  377mW    531M   17 S   10m 01s node     ┃│⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││AC  64.8W ─┐                ┌─▶ SoC     6.54W │
│    642 _windowse…   158.0  754mW   1012M    7 I   18m 02s mds_stor…││CPU ████▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.70W││           ├─▶ SYS  26.6W ──┼─▶ DISP    3.10W │
│    404 yusuf        156.0  348mW    494M   16 R    9m 24s Xcode    ││GPU ███▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         2.82W││BAT +12.4W─┘                └─▶ other   17.0W │
│    863 yusuf        147.0  231mW    1.5G   20 S   26m 03s Music    ││ANE ▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏          20mW││                                              │
│    625 root         145.0  725mW    975M    6 S   17m 25s Terminal ││RAM █▍▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         1.26W││                                              │
│    387 _windowse…   143.0  319mW    457M   15 S    8m 47s bird     ││DSP ███▍▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.10W││                                              │
│    829 root         121.0  173mW    1.4G   18 S   24m 49s cargo    ││FAB ▉▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         800mW││                                              │
╰────────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────╯╰──────────────────────────────────────────────╯
╭╸CHASSIS HEAT MAP╺ 67°C max ──╮╭╸MEMORY╺  51% ────────────────╮╭╸NETWORK╺ ↓ 22.9 ↑  7.2 ──────╮╭╸DISK╺ R   1.2 W   3.1 ───────╮╎ temps hidden ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╎
│                              ││24.6G / 48.0G              OK ││Σ↓  7.4G  Σ↑  1.4G            ││lat 284µ/451µ  iops  220/  95 │╎                              ╎
│ ╭─────────━━━━━━━━─────────╮ ││███████████████▍▏▏▏▏▏▏▏▏▏▏▏▏▏▏││↑   7.5 Mb/s⡄⣇⣷⣼⣄⣷⢰⣄⣇⣷⣼⣄⣷⢸⣄⣇⢰⣼││W   3.1 MB/s⣧ ⢸⡄ ⣧ ⢸⡄ ⣧ ⢸⡄ ⣧ ⢸│╎                              ╎
│ ├2190rpm ╭──────╮   1822rpm│ ││app 12.0G wired  6.0G cmpr  4.││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸│╎                              ╎
│ ├───╯   ╭╯      ╰────╮     │ ││swap  512M / 2.0G   ram pwr 1.││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿│╎                              ╎
│ │      ╭╯ CPU 63°  ╭─╯     │ ││55%                           ││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿│╎                              ╎
│ │      ╰──GPU 59°──╯SSD 44°│ ││                              ││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│╎                              ╎
│ │     BATT · 78% 33°       │ ││   ⢀⣤     ⣠⡄     ⣤     ⢠⡄     ││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│╎                              ╎
│ ├──────────────────────────┤ ││  ⢠⠞⢸    ⡴⠃⡇   ⢠⠞⢹    ⣰⠋⡇   ⢀⡞││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡏⡏⡏⡏⡏⡟⡟⡟││⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟│╎                              ╎
│ │                          │ ││ ⡴⠋ ⢸  ⢀⡞⠁ ⡇  ⣰⠋ ⢸  ⢀⡼⠁ ⡇  ⣠⠏ ││⢹⢻⢻⢻⢻⢻⢿⢿⢿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⡇⡇⡇⡇⡇⡇⡇││⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇│╎                              ╎
│ │                          │ ││⠚⠁  ⢸ ⣠⠏   ⡇⢀⡼⠁  ⢸⡀⢠⠞   ⣇ ⡴⠃  ││↓  47.5 Mb/s⠘⠸⠸⠹⠹⢹⢹⢻⢻⢻⠃⠃⠇⠇⠇⠇⡇⡇││⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇│╎                              ╎
│ ╰──────────────────────────╯ ││    ⢸⡴⠃    ⣧⠞     ⠷⠋    ⢸⡞⠁   ││▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄││⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃│╎                              ╎
│                              ││45% ⠈⠁     ⠉                  ││ping 13.9ms  jit  0.8ms     UP││R   9.4 MB/s⢸ ⢸ ⢸5⢸ ⢸f⢸3⢸2⢸.⢸G│╎                              ╎
╰──────────────────────────────╯╰───────────────── ⇄ swap here ╯╰──────────────────── ▚ moving ╯╰──────────────────────────────╯╎╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╎
╭╸CPU╺  44.0% ─────────────────────────────────────────────────────────────────────────────────────────────╮╭╸GPU╺  39.9% ─────────────────────────────────────╮
│           E 2.08GHz · P 2.79GHz                                                       63°C avg · 70°C max││@ 1.30GHz  2.82W                              59°C│
│    ▃▆                                                                                                    ││                                                  │
│   ▄██▆                                                                                                   ││                                                  │
│   ████                                                                                                   ││                                                  │
│E  ████      62.0% @ 2.08GHz  360mW                                                                       ││                                                  │
│                                                                                                          ││                                                  │
│                                                                                                          ││                                                  │
│        ▃                                                                                                 ││⢠   ⣄   ⡄  ⢠⡀  ⢠   ⣄   ⡄  ⢠⡀  ⢠   ⣄   ⡄  ⢠⡀  ⢠   ⣄│
│       ▄█  ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀││⣿⡆ ⢀⣿  ⢸⣷  ⣸⡇  ⣿⡆ ⢀⣿  ⢸⣷  ⣸⡇  ⣿⡆ ⢀⣿  ⢸⣷  ⣸⡇  ⣿⡆ ⢀⣿│
│   ▇  ▅██  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣇ ⢸⣿⡇ ⣾⣿⡀ ⣿⣿ ⢰⣿⣇ ⢸⣿⡇ ⣾⣿⡀ ⣿⣿ ⢰⣿⣇ ⢸⣿⡇ ⣾⣿⡀ ⣿⣿ ⢰⣿⣇ ⢸⣿│
│P0 ██▆███    37.0% @ 2.79GHz  5.80W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿ ⣿⣿⣷⢀⣿⣿⡇⢸⣿⣿⡆⣸⣿⣿ ⣿⣿⣷⢀⣿⣿⡇⢸⣿⣿⡆⣸⣿⣿ ⣿⣿⣷⢀⣿⣿⡇⢸⣿⣿⡆⣸⣿⣿ ⣿⣿│
│           ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿⣷⣿⣿⣿⣸⣿⣿⣿⣾⣿⣿⣇⣿⣿⣿⣷⣿⣿⣿⣸⣿⣿⣿⣾⣿⣿⣇⣿⣿⣿⣷⣿⣿⣿⣸⣿⣿⣿⣾⣿⣿⣇⣿⣿⣿⣷⣿⣿│
│           ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
│   █▂      ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
│   ██▄  ▂  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││rend ████▋▏▏▏▏▏▏▏▏▏▏      tile █▎▏▏▏▏▏▏▏▏▏▏▏▏▏    │
│P1 ███▆▄█    39.0% @ 2.79GHz  3.40W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││mem  3.3G                              active  62%│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net    ←↑↓→ choose a card  ⏎ drop here  esc cancel                                                sudo for all procs
