src/ui/snapshots/overview_hidden_panels_160x45.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                                               macOS 26.5  load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸CPU╺  44.0% ───────────────────────────────────────────────────────╮╭╸POWER╺ SYS  26.6W ─────────────────────╮
│     ▂     E 2.08GHz · P 2.79GHz                 63°C avg · 70°C max││PKG  6.54W  peak 13.2W                  │
│   ▄██▅                                                             ││⣠⣠⣠⡆⣶⣰⣠⣠⡆⣷⣰⣠⣤⡆⣦⣰⣠⣄⡄⣦⣰⣰⣄⣄⣦⣼⣰⣄⣄⣦⣴⢰⣆⣄⣄⣴⢰⣆⣆⣄│
│E  ████      62.0% @ 2.08GHz  360mW                                 ││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
│                                                                    ││CPU ████▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.70W│
│        ▃                                                           ││GPU ███▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         2.82W│
│P0 ▆▃▂▅██    37.0% @ 2.79GHz  5.80W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││ANE ▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏          20mW│
│           ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││RAM █▍▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         1.26W│
│   ▄▁      ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││DSP ███▍▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.10W│
│P1 ██▆▃▂▅    39.0% @ 2.79GHz  3.40W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││FAB ▉▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         800mW│
╰────────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────╯
                                ╭╸MEMORY╺  51% ────────────────╮╭╸NETWORK╺ ↓ 22.9 ↑  7.2 ──────╮╭╸DISK╺ R   1.2 W   3.1 ───────╮
                                │24.6G / 48.0G              OK ││Σ↓  7.4G  Σ↑  1.4G            ││lat 284µ/451µ  iops  220/  95 │
                                │███████████████▍▏▏▏▏▏▏▏▏▏▏▏▏▏▏││↑   7.5 Mb/s⡄⣇⣷⣼⣄⣷⢰⣄⣇⣷⣼⣄⣷⢸⣄⣇⢰⣼││W   3.1 MB/s⣧ ⢸⡄ ⣧ ⢸⡄ ⣧ ⢸⡄ ⣧ ⢸│
                                │app 12.0G wired  6.0G cmpr  4.││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸⡇ ⣿ ⢸│
                                │swap  512M / 2.0G   ram pwr 1.││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿⣧⢸⣿⡄⣿│
                                │55%                           ││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿⣿⢸⣿⡇⣿│
                                │                              ││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
                                │   ⢀⣤     ⣠⡄     ⣤     ⢠⡄     ││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│
                                │  ⢠⠞⢸    ⡴⠃⡇   ⢠⠞⢹    ⣰⠋⡇   ⢀⡞││⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡏⡏⡏⡏⡏⡟⡟⡟││⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟⣿⡟│
                                │ ⡴⠋ ⢸  ⢀⡞⠁ ⡇  ⣰⠋ ⢸  ⢀⡼⠁ ⡇  ⣠⠏ ││⢹⢻⢻⢻⢻⢻⢿⢿⢿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⡇⡇⡇⡇⡇⡇⡇││⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇⣿⡇│
                                │⠚⠁  ⢸ ⣠⠏   ⡇⢀⡼⠁  ⢸⡀⢠⠞   ⣇ ⡴⠃  ││↓  47.5 Mb/s⠘⠸⠸⠹⠹⢹⢹⢻⢻⢻⠃⠃⠇⠇⠇⠇⡇⡇││⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇⢿⡇│
                                │    ⢸⡴⠃    ⣧⠞     ⠷⠋    ⢸⡞⠁   ││▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄││⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃⢸⠃│
                                │45% ⠈⠁     ⠉                  ││ping 13.9ms  jit  0.8ms     UP││R   9.4 MB/s⢸ ⢸ ⢸5⢸ ⢸f⢸3⢸2⢸.⢸G│
                                ╰──────────────────────────────╯╰──────────────────────────────╯╰──────────────────────────────╯
╭╸PROCESSES╺ 160 · 10 running · 549 thr ───────────────────────────────────────────────────────────────────╮╭╸CHASSIS HEAT MAP╺ 67°C max ──────────────────────╮
│    PID USER         CPU%▼    PWR     MEM  THR S      TIME NAME                                           ││   ╭──────────────━━━━━━━━━━━━━━──────────────╮   │
│    659 yusuf        171.0  783mW    1.0G    8 S   18m 39s bird                                           ┃│   │2190rpm       ╭────────╮          1822rpm │   │
│    421 root         169.0  377mW    531M   17 S   10m 01s node                                           ┃│   ├──────╮      ╭╯        ╰──╮╭───╮          │   │
│    642 _windowse…   158.0  754mW   1012M    7 I   18m 02s mds_stores                                     ┃│   ├╮  ╭──╯    ╭─╯            ╰╯   ╰─╮        │   │
│    404 yusuf        156.0  348mW    494M   16 R    9m 24s Xcode                                          ┃│   ├╯  │       │     CPU 63°        ╭╯        │   │
│    863 yusuf        147.0  231mW    1.5G   20 S   26m 03s Music                                          ┃│   ├───╯       │                  ╭─╯SSD 44°  │   │
│    625 root         145.0  725mW    975M    6 S   17m 25s Terminal                                       ┃│   │           ╰╮    GPU 59°   ╭──╯           │   │
│    387 _windowse…   143.0  319mW    457M   15 S    8m 47s bird                                           ││   │            ╰─────55°──────╯              │   │
│    829 root         121.0  173mW    1.4G   18 S   24m 49s cargo                                          ││   │                                          │   │
│    591 _windowse…   119.0  667mW    901M    4 S   16m 11s Music                                          ││   │                 ╭──────╮                 │   │
│    353 yusuf        117.0  261mW    383M   13 S    7m 33s Terminal                                       ││   ├───────45°───────╯      ╰─────────────────┤   │
│    812 yusuf        108.0  144mW    1.3G   17 R   24m 12s claude                                         ││   │             BATT · 78% 33°               │   │
│    574 root         106.0  638mW    864M   26 I   15m 34s rust-analyzer                                  ││   │                                          │   │
│    336 _windowse…   104.0  232mW    346M   12 R    6m 56s Finder                                         ││   │                  ╭────╮                  │   │
│    795 _windowse…    95.0  115mW    1.3G   16 S   23m 35s Safari                                         ││   │                  ╰────╯                  │   │
│    557 yusuf         93.0  609mW    827M   25 S   14m 57s cargo                                          ││   ╰──────────────────────────────────────────╯   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit                              sudo for all procs
